--- a/DespidoTexto/src/DespidoFormulario/NewJFrame.form
+++ b/DespidoTexto/src/DespidoFormulario/NewJFrame.form
@@ -257,6 +257,7 @@
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
+            <Property name="name" type="java.lang.String" value="" noResource="true"/>
           </Properties>
           <Events>
             <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTextFieldFechaAltaFocusGained"/>
